--- a/templates/2.4/ports.conf.j2
+++ b/templates/2.4/ports.conf.j2
@@ -1,10 +1,2 @@
 # {{ ansible_managed }}
-Listen 80
-
-<IfModule mod_ssl.c>
-    Listen 443
-</IfModule>
-
-<IfModule mod_gnutls.c>
-    Listen 443
-</IfModule>
+Listen 80 443
