Work on virtualhosts

--- a/templates/2.2/default.conf.j2
+++ b/templates/2.2/default.conf.j2
@@ -21,7 +21,7 @@
         #AllowOverride None
         AllowOverride All
         Order allow,deny
-        allow from all
+        Allow from all
     </Directory>
 
     # Values: debug, info, notice, warn, error, crit, alert, emerg
@@ -63,7 +63,7 @@
         #AllowOverride None
         AllowOverride All
         Order allow,deny
-        allow from all
+        Allow from all
     </Directory>
 
     # Values: debug, info, notice, warn, error, crit, alert, emerg
